{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 65,
  "lineage": "843e3b5f-7d13-b2e1-8761-d55f18e163ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:981199568432:internet-gateway/igw-09ba2db16e77c0e27",
            "id": "igw-09ba2db16e77c0e27",
            "owner_id": "981199568432",
            "tags": {
              "Name": "hkjung-tetris-web-igw"
            },
            "tags_all": {
              "Name": "hkjung-tetris-web-igw"
            },
            "vpc_id": "vpc-059a453f48a35f82e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:981199568432:route-table/rtb-092de44d7d54651f5",
            "id": "rtb-092de44d7d54651f5",
            "owner_id": "981199568432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ba2db16e77c0e27",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hkjung-tetris-web-public-rt"
            },
            "tags_all": {
              "Name": "hkjung-tetris-web-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-059a453f48a35f82e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c74bf295630aa82",
            "route_table_id": "rtb-092de44d7d54651f5",
            "subnet_id": "subnet-07c00881ab6ffd2b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8936a54ed290982",
            "route_table_id": "rtb-092de44d7d54651f5",
            "subnet_id": "subnet-0d599cb61d19586ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:981199568432:security-group/sg-05f6bffe1fca44bc4",
            "description": "Allow HTTP inbound traffic for Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow DNS queries",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to Prisma Cloud Console (Recommended to restrict IPs)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-05f6bffe1fca44bc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hkjung-tetris-web-fargate-sg",
            "name_prefix": "",
            "owner_id": "981199568432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hkjung-tetris-web-fargate-sg"
            },
            "tags_all": {
              "Name": "hkjung-tetris-web-fargate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059a453f48a35f82e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:981199568432:subnet/subnet-07c00881ab6ffd2b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c00881ab6ffd2b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981199568432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkjung-tetris-web-public-subnet-1"
            },
            "tags_all": {
              "Name": "hkjung-tetris-web-public-subnet-1"
            },
            "vpc_id": "vpc-059a453f48a35f82e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:981199568432:subnet/subnet-0d599cb61d19586ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d599cb61d19586ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981199568432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkjung-tetris-web-public-subnet-2"
            },
            "tags_all": {
              "Name": "hkjung-tetris-web-public-subnet-2"
            },
            "vpc_id": "vpc-059a453f48a35f82e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:981199568432:vpc/vpc-059a453f48a35f82e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ff40bb47a7cc1ec",
            "default_route_table_id": "rtb-0db3672f37b905d04",
            "default_security_group_id": "sg-004e3ea9bdba5c89b",
            "dhcp_options_id": "dopt-0f4156bcbc0313009",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059a453f48a35f82e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db3672f37b905d04",
            "owner_id": "981199568432",
            "tags": {
              "Name": "hkjung-tetris-web-vpc"
            },
            "tags_all": {
              "Name": "hkjung-tetris-web-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}